--- a/llama_playground.ipynb
+++ b/llama_playground.ipynb
@@ -2,45 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nbformat in ./.venv/lib/python3.10/site-packages (5.10.4)\n",
-      "Requirement already satisfied: fastjsonschema>=2.15 in ./.venv/lib/python3.10/site-packages (from nbformat) (2.20.0)\n",
-      "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in ./.venv/lib/python3.10/site-packages (from nbformat) (5.7.2)\n",
-      "Requirement already satisfied: traitlets>=5.1 in ./.venv/lib/python3.10/site-packages (from nbformat) (5.14.3)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in ./.venv/lib/python3.10/site-packages (from nbformat) (4.23.0)\n",
-      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (2023.12.1)\n",
-      "Requirement already satisfied: referencing>=0.28.4 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.35.1)\n",
-      "Requirement already satisfied: rpds-py>=0.7.1 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.20.0)\n",
-      "Requirement already satisfied: attrs>=22.2.0 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (24.2.0)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in ./.venv/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.2.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install --upgrade nbformat"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -86,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:06<00:00,  1.54s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:06<00:00,  1.57s/it]\n"
      ]
     }
    ],
@@ -2159,22 +2120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: 'The capital of France is'\n",
-      "Generated text: The capital of France is known for its stunning architecture, art museums, and romantic atmosphere. But did you know that Paris has a fascinating history of being a hub for luxury and opulence? From the Palace of Versailles to the opulent mans\n"
+      "Input: '<|begin_of_text|>Capital of France is'\n",
+      "Generated text: Capital of France is Paris, the city of love, fashion, art, and cuisine. Paris is a city that has been a major hub for centuries, with a rich history and culture that is still evident today. From the iconic Eiff\n"
      ]
     }
    ],
    "source": [
     "# 4. Text Generation\n",
     "def generate_text(input_text, max_length=50):\n",
-    "    inputs = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "    inputs = tokenizer(input_text, return_tensors=\"pt\").to(device)\n",
     "    \n",
     "    attention_mask = inputs['attention_mask']\n",
     "    pad_token_id = tokenizer.pad_token_id if tokenizer.pad_token_id is not None else tokenizer.eos_token_id\n",
@@ -2183,7 +2144,7 @@
     "        inputs['input_ids'],\n",
     "        attention_mask=attention_mask,\n",
     "        max_length=max_length,\n",
-    "        do_sample=True,\n",
+    "        do_sample=False,\n",
     "        num_return_sequences=1,\n",
     "        pad_token_id=pad_token_id,\n",
     "        eos_token_id=tokenizer.eos_token_id,\n",
@@ -2193,7 +2154,153 @@
     "    print(f\"Input: '{input_text}'\")\n",
     "    print(f\"Generated text: {generated_text}\")\n",
     "\n",
-    "generate_text(\"The capital of France is\")"
+    "generate_text(\"\"\"<|begin_of_text|>Capital of France is\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:04<00:00,  1.19s/it]\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': [{'role': 'user', 'content': 'Capital of France is'},\n",
+       "   {'role': 'assistant', 'content': 'The capital of France is Paris.'}]}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use a pipeline as a high-level helper\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Capital of France is\"},\n",
+    "]\n",
+    "pipe = pipeline(\"text-generation\", model=\"meta-llama/Meta-Llama-3.1-8B-Instruct\", max_new_tokens=50, device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_built() else \"cpu\"))\n",
+    "pipe(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.42s/it]\n",
+      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatted Text: <|begin_of_text|>Capital of France is\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, pipeline\n",
+    "\n",
+    "# Initialize the pipeline\n",
+    "pipe = pipeline(\"text-generation\", model=\"meta-llama/Meta-Llama-3.1-8B-Instruct\", device='mps')\n",
+    "\n",
+    "# Access the tokenizer directly\n",
+    "tokenizer = pipe.tokenizer\n",
+    "\n",
+    "# Example message\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Capital of France is\"},\n",
+    "]\n",
+    "\n",
+    "# Simulate what the pipeline does internally\n",
+    "input_text = messages[0][\"content\"]\n",
+    "tokenized_input = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "\n",
+    "# Decode to see the formatted text\n",
+    "formatted_text = tokenizer.decode(tokenized_input['input_ids'][0], skip_special_tokens=False)\n",
+    "print(f\"Formatted Text: {formatted_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:06<00:00,  1.53s/it]\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed Inputs: {'input_ids': tensor([[128000, 128006,   9125, 128007,    271,  38766,   1303,  33025,   2696,\n",
+      "             25,   6790,    220,   2366,     18,    198,  15724,   2696,     25,\n",
+      "            220,   1627,  10263,    220,   2366,     19,    271, 128009, 128006,\n",
+      "            882, 128007,    271,  64693,    315,   9822,    374, 128009, 128006,\n",
+      "          78191, 128007,    271]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'prompt_text': <transformers.pipelines.text_generation.Chat object at 0x17feb6d40>}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': [{'role': 'user', 'content': 'Capital of France is'},\n",
+       "   {'role': 'assistant', 'content': 'The capital of France is Paris.'}]}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import pipeline, AutoTokenizer, AutoModelForCausalLM, TextGenerationPipeline\n",
+    "\n",
+    "# Set the device to MPS if available\n",
+    "device = torch.device(\"mps\" if torch.backends.mps.is_built() else \"cpu\")\n",
+    "\n",
+    "# If you want to inspect the processing within the pipeline:\n",
+    "class CustomPipeline(TextGenerationPipeline):\n",
+    "    def preprocess(self, inputs, **generate_kwargs):\n",
+    "        # Call the original preprocess method\n",
+    "        model_inputs = super().preprocess(inputs, **generate_kwargs)\n",
+    "        print(f\"Preprocessed Inputs: {model_inputs}\")\n",
+    "        return model_inputs\n",
+    "\n",
+    "# Initialize the custom pipeline\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Meta-Llama-3.1-8B-Instruct\").to(device)\n",
+    "custom_pipe = CustomPipeline(model=model, tokenizer=tokenizer, device=device, max_new_tokens=50)\n",
+    "\n",
+    "# Generate and inspect\n",
+    "custom_pipe(messages)\n",
+    "\n"
    ]
   },
   {
@@ -2641,6 +2748,272 @@
     "\n",
     "# Example usage\n",
     "rank_candidates(\"The capital of India is Delhi, what is the capital of France? It is\", [\"Paris\", \" Berlin\", \" London\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.29s/it]\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': [{'role': 'user', 'content': 'Who are you?'},\n",
+       "   {'role': 'assistant',\n",
+       "    'content': 'I\\'m an artificial intelligence model known as Llama. Llama stands for \"Large Language Model Meta AI.\"'}]}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use a pipeline as a high-level helper\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Who are you?\"},\n",
+    "]\n",
+    "pipe = pipeline(\"text-generation\", model=\"meta-llama/Meta-Llama-3.1-8B-Instruct\", max_new_tokens=50, device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_built() else \"cpu\"))\n",
+    "pipe(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate method default parameters:\n",
+      "(inputs: Optional[torch.Tensor] = None, generation_config: Optional[transformers.generation.configuration_utils.GenerationConfig] = None, logits_processor: Optional[transformers.generation.logits_process.LogitsProcessorList] = None, stopping_criteria: Optional[transformers.generation.stopping_criteria.StoppingCriteriaList] = None, prefix_allowed_tokens_fn: Optional[Callable[[int, torch.Tensor], List[int]]] = None, synced_gpus: Optional[bool] = None, assistant_model: Optional[ForwardRef('PreTrainedModel')] = None, streamer: Optional[ForwardRef('BaseStreamer')] = None, negative_prompt_ids: Optional[torch.Tensor] = None, negative_prompt_attention_mask: Optional[torch.Tensor] = None, **kwargs) -> Union[transformers.generation.utils.GenerateDecoderOnlyOutput, transformers.generation.utils.GenerateEncoderDecoderOutput, transformers.generation.utils.GenerateBeamDecoderOnlyOutput, transformers.generation.utils.GenerateBeamEncoderDecoderOutput, torch.LongTensor]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "# Access the underlying model and tokenizer\n",
+    "model = pipe.model\n",
+    "tokenizer = pipe.tokenizer\n",
+    "\n",
+    "# Inspect the generate method's signature to see default values\n",
+    "print(\"Generate method default parameters:\")\n",
+    "print(inspect.signature(model.generate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model configuration parameters:\n",
+      "LlamaConfig {\n",
+      "  \"_name_or_path\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",\n",
+      "  \"architectures\": [\n",
+      "    \"LlamaForCausalLM\"\n",
+      "  ],\n",
+      "  \"attention_bias\": false,\n",
+      "  \"attention_dropout\": 0.0,\n",
+      "  \"bos_token_id\": 128000,\n",
+      "  \"eos_token_id\": [\n",
+      "    128001,\n",
+      "    128008,\n",
+      "    128009\n",
+      "  ],\n",
+      "  \"hidden_act\": \"silu\",\n",
+      "  \"hidden_size\": 4096,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 14336,\n",
+      "  \"max_position_embeddings\": 131072,\n",
+      "  \"mlp_bias\": false,\n",
+      "  \"model_type\": \"llama\",\n",
+      "  \"num_attention_heads\": 32,\n",
+      "  \"num_hidden_layers\": 32,\n",
+      "  \"num_key_value_heads\": 8,\n",
+      "  \"pretraining_tp\": 1,\n",
+      "  \"rms_norm_eps\": 1e-05,\n",
+      "  \"rope_scaling\": {\n",
+      "    \"factor\": 8.0,\n",
+      "    \"high_freq_factor\": 4.0,\n",
+      "    \"low_freq_factor\": 1.0,\n",
+      "    \"original_max_position_embeddings\": 8192,\n",
+      "    \"rope_type\": \"llama3\"\n",
+      "  },\n",
+      "  \"rope_theta\": 500000.0,\n",
+      "  \"tie_word_embeddings\": false,\n",
+      "  \"torch_dtype\": \"bfloat16\",\n",
+      "  \"transformers_version\": \"4.44.0\",\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 128256\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View the model's default configuration\n",
+    "print(\"Model configuration parameters:\")\n",
+    "print(model.config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenized input: {'input_ids': tensor([[128000,  15546,    527,    499,     30]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Access the tokenizer and model\n",
+    "tokenizer = pipe.tokenizer\n",
+    "\n",
+    "# Prepare the input message\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Who are you?\"}]\n",
+    "\n",
+    "# You might need to convert the input to a format similar to what the pipeline does\n",
+    "input_text = messages[0][\"content\"]\n",
+    "\n",
+    "# Tokenize the input\n",
+    "tokenized_input = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "print(\"Tokenized input:\", tokenized_input)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Who are you?'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(tokenized_input['input_ids'].squeeze().tolist(), skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:09<00:00,  2.28s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Who are you? Who is your family?\n",
+      "I am a 5-year-old, 10-month-old, and a 6-month-old child. My family is a loving and supportive one, and we are all excited to start this new chapter in our lives. My\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "# Load the tokenizer and model\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Meta-Llama-3.1-8B-Instruct\")\n",
+    "\n",
+    "# Set the pad_token to eos_token\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Meta-Llama-3.1-8B-Instruct\")\n",
+    "\n",
+    "# Prepare the input message\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"Who are you?\"},\n",
+    "]\n",
+    "\n",
+    "# Convert the input message to a single string (assuming one message)\n",
+    "input_text = messages[0][\"content\"]\n",
+    "\n",
+    "# Tokenize the input text and create attention mask\n",
+    "inputs = tokenizer(input_text, return_tensors=\"pt\", padding=True)\n",
+    "input_ids = inputs.input_ids\n",
+    "attention_mask = inputs.attention_mask\n",
+    "\n",
+    "# Move tensors to the appropriate device (CUDA or MPS or CPU)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_built() else \"cpu\")\n",
+    "input_ids = input_ids.to(device)\n",
+    "attention_mask = attention_mask.to(device)\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Generate the output with attention mask\n",
+    "output_ids = model.generate(input_ids, attention_mask=attention_mask, max_new_tokens=50, pad_token_id=tokenizer.eos_token_id)\n",
+    "\n",
+    "# Decode the generated token IDs to text\n",
+    "output_text = tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
+    "\n",
+    "print(output_text)\n",
+    "\n"
    ]
   },
   {
